# 2024_Lab_10_Kirra_Muteeb

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  hello_dormant_gpio.c  hello_freertos.c  hello_sleep_alarm.c  power.c
